--- a/templates/base.html
+++ b/templates/base.html
@@ -22,11 +22,13 @@
     <!-- Header section -->
     <header class="bg-white shadow-md p-4">
         <div class="container mx-auto flex justify-between items-center">
+            <a href="/" class="hover:text-blue-500">Home</a>
             <h1 class="text-xl font-bold">Filter | Engine</h1>
             <nav>
                 <ul class="flex space-x-4">
-                    <li><a href="/" class="hover:text-blue-500">Home</a></li>
-                    <li><a href="" class="hover:text-blue-500">Products</a></li>
+                    <li><a href="{% url 'manual_list' %}" class="hover:text-blue-500">Manual Filters</a></li>
+                    <li><a href="{% url 'dj_filters_list' %}" class="hover:text-blue-500">Django Filters</a></li>
+                    <li><a href="{% url 'checkbox_apply_list' %}" class="hover:text-blue-500">Checkbox + Apply</a></li>
                 </ul>
             </nav>
         </div>
