add instant filters

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                     <li><a href="{% url 'manual_list' %}" class="hover:text-blue-500">Manual Filters</a></li>
                     <li><a href="{% url 'dj_filters_list' %}" class="hover:text-blue-500">Django Filters</a></li>
                     <li><a href="{% url 'checkbox_apply_list' %}" class="hover:text-blue-500">Checkbox + Apply</a></li>
+                    <li><a href="{% url 'product_list_ajax' %}" class="hover:text-blue-500">Instant Filtering</a></li>
                 </ul>
             </nav>
         </div>
