--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
                     <li><a href="{% url 'dj_filters_list' %}" class="hover:text-blue-500">Django Filters</a></li>
                     <li><a href="{% url 'checkbox_apply_list' %}" class="hover:text-blue-500">Checkbox + Apply</a></li>
                     <li><a href="{% url 'product_list_ajax' %}" class="hover:text-blue-500">Instant Filtering</a></li>
+                    <li><a href="{% url 'multi_tags_list' %}" class="hover:text-blue-500">Multi Select</a></li>
                 </ul>
             </nav>
         </div>
