Add complete README docs

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -5,7 +5,8 @@
 {% block content %}
 <div class="flex justify-center py-12 px-4 bg-gray-50 min-h-screen">
     <div class="max-w-4xl w-full space-y-12">
-        <h1 class="text-4xl font-extrabold text-center text-gray-800">Welcome to the Filter Engine</h1>
+        <h1 class="text-4xl font-extrabold text-center text-blue-800">Filter Engine Documentation</h1>
+        <h5 class="text-4xl font-extrabold text-center text-gray-800">Welcome to the Filter Engine</h5>
 
         <p class="text-lg text-left text-gray-700">
             The Filter Engine is designed to provide a robust and efficient system for filtering products and data
